[package]
name = "namada-cosmos-middleware-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
borsh-derive = { version = "=1.0.0-alpha.4" }
borsh = {version = "1.0.0-alpha.4", features = ["schema", "derive"]}
borsh-ext = {tag = "v1.0.0-alpha.4", git = "https://github.com/heliaxdev/borsh-ext"}
dotenv = "0.15.0"
namada_sdk = { git = "https://github.com/anoma/namada", branch = "fraccaman+murisi/with-async", default-features = false, features = ["tendermint-rpc", "std", "async-send"] }
prost = "0.12.0"
prost-types = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tendermint = "0.34.0"
tendermint-config = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"]}
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
